# ScrappingFord

./: .env  .gitignore  dados_carros.csv  main.py  model_ford.ipynb  nada.ipynb  pyproject.toml
api/v1/routes/: auth.py
data/: chevrolet-specifications.csv  ford-specifications.csv  honda-specifications.csv  hyundai-specifications.csv  toyota-specifications.csv
scrappingford/: database.py  models.py  schemas.py
scrappingford/api/: main.py  mock_data.json
scrappingford/apis/: api.py  carapi.py
scrappingford/apis/routers/: cars.py
scrappingford/routers/: cars.py
scrappingford/scrapers/: base_scraper.py  ford_scraper.py  honda_scraper.py  toyota_scraper.py
src/database/: database.py
src/models/: brand.py  category.py  vehicle.py
src/vehicles/: controller.py  repository.py  service.py
src/vehicles/models/: brand.py  category.py  vehicle.py
src/vehicles/schemas/: brand.py  category.py  constants.py  vehicle.py
tests/: conftest.py
uteis/: limpar_dataframe.py
