[project]
name = "scrappingford"
version = "0.1.0"
description = ""
authors = [
    {name = "João Victor",email = "joaovictoroliveiradossantos18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "ruff (>=0.15.9,<0.16.0)",
    "task (>=0.2.5,<0.3.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "scrappingford", from = "src"}]

[tool.ruff]
line-length = 79
extend-exclude=["migrations"]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = "ruff check"
format = "ruff format"
run = "fastapi dev fastapi_zero/app.py"
pre_test = "task lint"
test = "pytest -s -x --cov=fastapi_zero -vv"
post_test = "coverage html"