[project]
name = "scrappingford"
version = "0.1.0"
description = ""
authors = [
    {name = "João Victor",email = "joaovictoroliveiradossantos18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "ruff (>=0.15.9,<0.16.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "playwright (>=1.59.0,<2.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "fastapi (>=0.137.2,<0.138.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "scrappingford", from = "src"}]

[tool.ruff]
line-length = 79
extend-exclude=["migrations"]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = "ruff check"
format = "ruff format"
run = "fastapi dev fastapi_zero/app.py"
pre_test = "task lint"
test = "pytest -s -x --cov=fastapi_zero -vv"
post_test = "coverage html"